--- a/addons/mail/views/ir_model_views.xml
+++ b/addons/mail/views/ir_model_views.xml
@@ -10,7 +10,7 @@
                 <field name="is_mail_activity" readonly="state != 'manual'" groups="base.group_no_one"/>
                 <field name="is_mail_blacklist" readonly="state != 'manual'" groups="base.group_no_one"/>
             </field>
-            <xpath expr="//field[@name='field_id']//field[@name='copied']" position="after">
+            <xpath expr="//field[@name='field_id']//group//field[@name='state']" position="before">
                 <field name="state" invisible="1"/>
                 <field name="tracking" readonly="state != 'manual'"/>
             </xpath>
@@ -33,7 +33,7 @@
         <field name="model">ir.model.fields</field>
         <field name="inherit_id" ref="base.view_model_fields_form"/>
         <field name="arch" type="xml">
-            <field name="copied" position="after">
+            <field name="state" position="before">
                 <field name="state" invisible="1"/>
                 <field name="tracking" invisible="ttype == 'binary'" readonly="state != 'manual'"/>
             </field>
