--- a/addons/mail/views/mail_activity_plan_template_views.xml
+++ b/addons/mail/views/mail_activity_plan_template_views.xml
@@ -24,19 +24,25 @@
                     <field name="company_id" invisible="1"/>
                     <field name="res_model" invisible="1"/>
                     <sheet>
-                        <group>
-                            <field name="activity_type_id"/>
-                            <field name="summary" placeholder="e.g. Discuss Proposal"/>
-                            <field name="responsible_type"/>
-                            <field name="responsible_id" invisible="responsible_type != 'other'" required="responsible_type == 'other'"/>
-                            <label for="delay_count"/>
-                            <div>
-                                <field class="oe_inline pe-1 o_input_3ch" name="delay_count"/>
-                                <field class="oe_inline ps-1 pe-2" name="delay_unit"/>
-                                <field class="oe_inline" name="delay_from"/>
-                            </div>
+                        <group string="Definition" class="mx-0 rounded border mb-4 i__group">
+                            <group>
+                                <field name="activity_type_id"/>
+                                <field name="summary" placeholder="e.g. Discuss Proposal"/>
+                            </group>
+                            <group>
+                                <field name="responsible_type"/>
+                                <field name="responsible_id" invisible="responsible_type != 'other'" required="responsible_type == 'other'"/>
+                                <label for="delay_count"/>
+                                <div class="d-flex flex-wrap">
+                                    <field class="oe_inline pe-1 o_input_4ch" name="delay_count"/>
+                                    <field class="flex-grow-1 w-auto ps-1" name="delay_unit"/>
+                                    <field class="mt-2" name="delay_from"/>
+                                </div>
+                            </group>
+                            <group colspan="2" class='mt-3'>
+                                <field name="note" nolabel="0" class="oe-bordered-editor" placeholder="e.g. Log a note"/>
+                            </group>
                         </group>
-                        <field name="note" nolabel="1" class="oe-bordered-editor" placeholder="e.g. Log a note"/>
                     </sheet>
                 </form>
             </field>
