--- a/addons/mail/views/mail_activity_plan_views.xml
+++ b/addons/mail/views/mail_activity_plan_views.xml
@@ -50,7 +50,58 @@
                     <field name="active" invisible="1"/>
                     <sheet>
                         <widget name="web_ribbon" title="Archived" bg_color="text-bg-danger" invisible="active"/>
-                        <div class="oe_title">
+                        <div>
+                            <group string="Definition" class="mb-4 mx-0 rounded border i__group">
+                                <field name="name" placeholder="e.g. Onboarding" options="{'line_breaks': False}" widget="text"/>
+                                <group name="group_plan_fields" colspan="2" class="mt-3 px-0 mx-0">
+                                    <group>
+                                        <field name="res_model"/>
+                                    </group>
+                                    <group name="company_id" groups="base.group_multi_company">
+                                        <field name="company_id" domain="[('id', '=', allowed_company_ids)]" placeholder="Visible to all"/>
+                                    </group>
+                                </group>
+                                <group colspan="2" class="mt-3" string="Activities to Create">
+                                    <field name="template_ids" nolabel="1" context="{'default_res_model': res_model}">
+                                    <list>
+                                        <field name="company_id" column_invisible="1"/>
+                                        <field name="note" column_invisible="1"/>
+                                        <field name="sequence" widget="handle"/>
+                                        <field name="activity_type_id" options="{'no_quick_create': True}"/>
+                                        <field name="summary" placeholder="e.g. Discuss Proposal"/>
+                                        <field name="responsible_type"/>
+                                        <field name="responsible_id" readonly="responsible_type != 'other'" widget="many2one_avatar_user"/>
+                                        <field name="delay_count"/>
+                                        <field name="delay_unit" string="Unit"/>
+                                        <field name="delay_from"/>
+                                        <field name="next_activity_ids" widget="many2many_tags" invisible="not next_activity_ids" options="{                                                 'no_quick_create': True,                                                 'edit_tags': True,                                             }" optional="hide"/>
+                                    </list>
+                                    <kanban class="o_kanban_mobile">
+                                        <field name="icon"/>
+                                        <templates>
+                                            <t t-name="card">
+                                                <div class="fw-bold fs-5">
+                                                    <i t-if="record.icon.value" t-attf-class="fa #{record.icon.value} fa-fw " role="img" aria-label="Activity Type" title="Activity Type"/>
+                                                    <field name="activity_type_id"/>
+                                                </div>
+                                                <field name="summary"/>
+                                                <div>
+                                                    <field name="delay_count"/> <field name="delay_unit"/>
+                                                    (<field name="delay_from"/>)
+                                                </div>
+                                                <field name="next_activity_ids" widget="many2many_tags" invisible="not next_activity_ids"/>
+                                                <footer class="p-0">
+                                                    <field name="responsible_type"/>
+                                                    <field class="ms-auto" name="responsible_id" widget="many2one_avatar_user" readonly="1"/>
+                                                </footer>
+                                            </t>
+                                        </templates>
+                                    </kanban>
+                                </field>
+                                </group>
+                            </group>
+                        </div>
+                        <!-- <div class="oe_title">
                             <label for="name" string="Plan Name"/>
                             <h1>
                                 <field name="name" placeholder="e.g. Onboarding" options="{'line_breaks': False}" widget="text"/>
@@ -66,7 +117,7 @@
                         </group>
                         <notebook>
                             <page string="Activities To Create">
-                                <!-- Pass on the model to ensure the correct dynamic selection (in e.g. hr) on unsaved plans -->
+                                Pass on the model to ensure the correct dynamic selection (in e.g. hr) on unsaved plans
                                 <field name="template_ids" nolabel="1" context="{'default_res_model': res_model}">
                                     <list>
                                         <field name="company_id" column_invisible="1"/>
@@ -116,7 +167,7 @@
                                     </kanban>
                                 </field>
                             </page>
-                        </notebook>
+                        </notebook> -->
                     </sheet>
                 </form>
             </field>
