--- a/addons/digest/views/digest_views.xml
+++ b/addons/digest/views/digest_views.xml
@@ -97,11 +97,11 @@
         <field name="search_view_id" ref="digest_digest_view_search"/>
     </record>
 
-    <menuitem id="digest_menu"
+    <!-- <menuitem id="digest_menu"
         action="digest_digest_action"
         parent="base.menu_email"
         groups="base.group_erp_manager"
-        sequence="80"/>
+        sequence="80"/> -->
 
     <!-- DIGEST.TIP -->
     <record id="digest_tip_view_tree" model="ir.ui.view">
@@ -148,10 +148,10 @@
         <field name="search_view_id" ref="digest_tip_view_search"/>
     </record>
 
-    <menuitem id="digest_tip_menu"
+    <!-- <menuitem id="digest_tip_menu"
         action="digest_tip_action"
         parent="base.menu_email"
         groups="base.group_erp_manager"
-        sequence="81"/>
+        sequence="81"/> -->
 
 </inphms>
