--- a/addons/mail/views/discuss_channel_views.xml
+++ b/addons/mail/views/discuss_channel_views.xml
@@ -57,7 +57,56 @@
                         <field name="is_editable" invisible="1"/>
                         <field name="image_128" widget="image" class="oe_avatar" options="{'size': [90, 90], 'preview_image':'avatar_128'}" readonly="not is_editable"/>
                         <widget name="web_ribbon" title="Archived" bg_color="text-bg-danger" invisible="active"/>
-                        <div class="oe_title">
+                        
+                        <div>
+                            <group class="i__group border rounded mb-4">
+                                <div>
+                                    <field name="image_128" widget="image" class="oe_avatar" options="{'size': [90, 90], 'preview_image':'avatar_128'}" readonly="not is_editable"/>
+                                </div>
+                                <div>
+                                    <h2 class="mb-0 d-flex gap-2 align-items-center">
+                                        #<field name="name" class="flex-grow-1" default_focus="1" placeholder="e.g. support" readonly="not is_editable"/>
+                                    </h2>
+                                    <div class=" mt-2">
+                                        <field name="active" invisible="1"/>
+                                        <label for="description"></label>
+                                        <field name="description" placeholder="Topics discussed in this group..." readonly="not is_editable"/>
+                                    </div>
+                                </div>
+                            </group>
+                            <group string="Privacy" name="privacy" class="border rounded mb-4 mx-0 i__group">
+                                <group class="o_label_nowrap">
+                                    <field name="group_public_id" invisible="channel_type != 'channel' or parent_channel_id" readonly="not is_editable"/>
+                                    <field name="group_ids" widget="many2many_tags" invisible="channel_type != 'channel'" string="Auto Subscribe Groups" readonly="not is_editable"/>
+                                </group>
+                            </group>
+                            <group string="Members" name="members" class="border rounded mb-4 mx-0 i__group">
+                                <field name="channel_type" invisible="1"/>
+                                <field name="channel_member_ids" mode="list" context="{'active_test': False}" readonly="channel_type == 'chat'">
+                                    <list string="Members" editable="bottom">
+                                        <field name="partner_id" readonly="id or guest_id" required="not guest_id"/>
+                                        <field name="guest_id" readonly="id or partner_id" required="not partner_id"/>
+                                    </list>
+                                </field>
+                            </group>
+                            <group string="Extra info" name="extra_info" class="border rounded mb-4 mx-0 i__group" groups="base.group_no_one">
+                                <group class="o_label_nowrap">
+                                    <field name="channel_type"/>
+                                    <field name="parent_channel_id"/>
+                                    <field name="sub_channel_ids"/>
+                                </group>
+                                <group class="o_label_nowrap">
+                                    <field name="from_message_id"/>
+                                    <field name="sfu_channel_uuid"/>
+                                    <field name="sfu_server_url"/>
+                                </group>
+                            </group>
+                            <group string="Integrations" name="discuss_channel_integrations" class="" invisible="1">
+                                
+                            </group>
+                        </div>
+                        
+                        <!-- <div class="oe_title">
                             <label for="name" string="Group Name"/>
                             <h1>
                                 #<field name="name" class="oe_inline" default_focus="1" placeholder="e.g. support" readonly="not is_editable"/>
@@ -97,7 +146,7 @@
                                 </group>
                             </page>
                             <page string="Integrations" invisible="1" name="discuss_channel_integrations"></page>
-                        </notebook>
+                        </notebook> -->
                     </sheet>
                 </form>
             </field>
