--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -1,6 +1,11 @@
 .o-mail-Message {
     transition: background-color .2s ease-out, opacity .5s ease-out, box-shadow .5s ease-out, transform .2s ease-out;
 
+    &:hover {
+        background-color: mix($gray-100, $gray-200) !important;
+        overflow: hidden;
+    }
+
     &.o-card {
         background-color: $o-view-background-color;
         --border-opacity: .2;
@@ -99,7 +104,7 @@
 
 .o-mail-Message-bubble, .o-mail-Message-bubbleTail {
     $_bubble_colors_map: (
-        'o-blue': $white,
+        'o-blue': $info,
         'o-green': $success,
         'o-orange': $warning,
     );
