--- a/addons/mail/static/src/core/common/thread.scss
+++ b/addons/mail/static/src/core/common/thread.scss
@@ -20,6 +20,15 @@
     --avatar-size: #{$h1-font-size};
     --icon-font-size: 2.6em;
 
+    .i-mail-thread-empty-channelIcon {
+        box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3),
+                    inset 0 -2px 3px rgba(0, 0, 0, 0.2),
+                    0 8px 20px rgba(0, 0, 0, 0.2);
+        margin: 0 auto 15px;
+        width: 56px;
+        height: 56px;
+    }
+
     &.o-mail-Thread-avatarChatWindow {
         --avatar-size: 28px;
         --icon-font-size: 1.5em;
