--- a/addons/mail/views/mail_menus.xml
+++ b/addons/mail/views/mail_menus.xml
@@ -4,23 +4,42 @@
         id="mail.menu_root_discuss"
         action="action_discuss"
         web_icon="mail,static/description/icon.png"
+        description="Communicate with your colleagues/customers/guest within Inphms."
         groups="base.group_user"
         sequence="5"
     />
-    <menuitem
-        id="mail.main_menu_discuss"
-        name="Talks"
+    <!-- Overview -->
+    <menuitem 
+        id="mail.main_menu_overview"
+        name="Overview"
         parent="mail.menu_root_discuss"
-        action="action_discuss"
         sequence="1"
-    />
-    <menuitem
-        id="mail.menu_channel"
-        name="Channels"
-        parent="mail.menu_root_discuss"
-        action="mail.discuss_channel_action"
-        sequence="2"
-    />
+    >
+        <menuitem
+            id="mail.main_menu_discuss"
+            name="Chats"
+            action="action_discuss"
+            sequence="1"
+        />
+        <menuitem
+            id="mail.menu_channel"
+            name="Channels"
+            action="mail.discuss_channel_action"
+            sequence="2"
+        />
+        <menuitem name="Canned Responses"
+            id="mail.menu_canned_responses"
+            submenu_icon="mail,static/description/menu_icons/canned_responses.svg"
+            action="mail.mail_canned_response_action"
+            sequence="15"
+        />
+        <menuitem name="Roles"
+            id="mail.menu_roles"
+            submenu_icon="mail,static/description/menu_icons/roles.svg"
+            action="mail.res_role_action"
+            sequence="25"
+        />
+    </menuitem>
     <menuitem
         id="mail.menu_configuration"
         name="Settings"
@@ -42,20 +61,7 @@
         action="mail.discuss_call_settings_action"
         sequence="5"
     />
-    <menuitem name="Canned Responses"
-        id="mail.menu_canned_responses"
-        parent="mail.menu_configuration"
-        submenu_icon="mail,static/description/menu_icons/canned_responses.svg"
-        action="mail.mail_canned_response_action"
-        sequence="15"
-    />
-    <menuitem name="Roles"
-        id="mail.menu_roles"
-        parent="mail.menu_configuration"
-        submenu_icon="mail,static/description/menu_icons/roles.svg"
-        action="mail.res_role_action"
-        sequence="25"
-    />
+    
 
     <!-- === System Menu Setup === -->
     <!-- <record id="base.menu_email" model="ir.ui.menu">
