--- a/addons/web/static/src/scss/primary_variables.scss
+++ b/addons/web/static/src/scss/primary_variables.scss
@@ -161,6 +161,8 @@ $o-table-cell-padding-y-sm: .25rem !default;
 $i-box-shadow: 0 0 1px 0 rgba($o-black, .2667),
                0 4px 6px -1px rgba($o-black, .1),
                0 2px 4px -2px rgba($o-black, .1) !default;
+$i-bubble-box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3),
+                      inset 0 -2px 3px rgba(0, 0, 0, 0.2) !default;
 
 // Navs
 $i-nav-link-padding-y: .25rem !default;
