--- a/addons/web/static/src/webclient/home_menu/home_menu.scss
+++ b/addons/web/static/src/webclient/home_menu/home_menu.scss
@@ -47,6 +47,23 @@
         border-radius: $border-radius-pill;
     }
 
+    // Header
+    .i_home_menu_header {
+        text-shadow: $o-home-menu-caption-shadow;
+        .i_home_menu_header_title {
+            color: var(--homeMenuCaption-color, #{$o-home-menu-caption-color});
+        }
+        .i_home_menu_header_subtitle {
+            color: var(--homeMenuCaption-color, #{$o-home-menu-caption-color});
+        }
+    }
+
+    // Utils
+    .i_muted {
+        color: #{$i-home-menu-muted-color};
+    }
+    
+    // Content
     .i_menu_sections_wrapper {
         display: grid;
         grid-template-columns: 2fr 1fr;
@@ -65,10 +82,37 @@
             .i_app {
                 background: var(--AppSwitcherIcon-background, #{$o-home-menu-app-icon-background-color});
                 border-radius: $border-radius;
-                box-shadow: $box-shadow-sm;
+                box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3),
+                            inset 0 -2px 3px rgba(0, 0, 0, 0.2),
+                            0 8px 20px rgba(0, 0, 0, 0.2);
+                border-color: #{$i-home-menu-app-icon-border-color} !important;
+                position: relative;
+                overflow: hidden;
+                &::before {
+                    content: "";
+                    @include o-position-absolute(0, 0, 0, -50%);
+                    background: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.1), transparent);
+                    transform: skewX(-25deg);
+                    transition: 0.5s;
+                    opacity: 0;
+                }
+                &:hover {
+                    &::before {
+                        opacity: 1;
+                        left: 150%;
+                    }
+                }
 
+                .i_app_icon_image {
+                    max-width: 50px;
+                    max-height: 50px;
+                }
+                
+                .i_app_wrapper {
+                    color: var(--homeMenuCaption-color, #{$o-home-menu-caption-color});
+                }
                 &.i_focused {
-                    background: $component-active-bg;
+                    background: #{$i-home-menu-app-focus-bg};
                     outline: 1px solid $o-action;
                 }
 
@@ -76,8 +120,10 @@
                     font-size: 16px;
                 }
 
-                .i_app_description * {
-                    margin-bottom: 0 !important;
+                .i_app_description {
+                    * {
+                        margin-bottom: 0 !important;
+                    }
                 }
             }
         }
