--- a/addons/web/static/src/webclient/home_menu/home_menu.variables.dark.scss
+++ b/addons/web/static/src/webclient/home_menu/home_menu.variables.dark.scss
@@ -2,5 +2,11 @@
 // ============================================================================
 // No CSS hacks, variables overrides only
 
+$o-home-menu-app-icon-background-color: rgba(#fff, .05);
+
+$i-home-menu-app-icon-border-color: $o-gray-300 !default;
+$i-home-menu-muted-color: rgba($o-gray-700, $o-opacity-muted) !default;
+$i-home-menu-app-focus-bg: $o-gray-300 !default;
+
 $o-home-menu-caption-color: $o-black !default;
 $o-home-menu-caption-shadow: 0 1px 2px rgba(0, 0, 0, .75), 0 2px 5px rgba(0, 0, 0, .05), 0 0 5px rgba(0, 0, 0, .05) !default;
