--- a/addons/web/static/src/webclient/home_menu/home_menu.variables.scss
+++ b/addons/web/static/src/webclient/home_menu/home_menu.variables.scss
@@ -2,11 +2,17 @@ $o-home-menu-font-size-base: 1rem;
 $o-home-menu-container-size: 850px;
 $o-home-menu-app-icon-max-width: 70px;
 $o-home-menu-app-icon-padding: 10px;
-$o-home-menu-app-icon-background-color: rgba(#fff, 1); 
+// $o-home-menu-app-icon-background-color: rgba(#fff, 1);
 // $o-home-menu-app-icon-background-color: linear-gradient(135deg, #1B5E20 0%, #2E7D32 100%);
 // $o-home-menu-app-icon-background-color: linear-gradient(135deg, #1B5E20 0%, #84e589 100%);
+$o-home-menu-app-icon-background-color: rgba(40,40,40, 0.4);
 
-$o-home-menu-caption-color: $o-main-text-color !default;
+$i-home-menu-app-icon-border-color: $o-gray-700 !default;
+$i-home-menu-muted-color: rgba($o-gray-300, $o-opacity-muted) !default;
+$i-home-menu-app-focus-bg: $o-action !default;
+
+// $o-home-menu-caption-color: $o-main-text-color !default;
+$o-home-menu-caption-color: $o-white !default;
 $o-home-menu-caption-shadow: none !default;
 
 $o-home-menu-custom-caption-color: #fff !default;
