--- a/addons/web/static/src/webclient/websidebar/websidebar.scss
+++ b/addons/web/static/src/webclient/websidebar/websidebar.scss
@@ -80,7 +80,10 @@
             border-radius: 0;
         }
         .active {
-            box-shadow: inset 2px 0 0 $o-component-active-border;
+            box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3),
+                        inset 0 -2px 3px rgba(0, 0, 0, 0.2),
+                        0 8px 20px rgba(0, 0, 0, 0.2),
+                        inset 2px 0 0 $o-component-active-border;
         }
     }
 
